名前空間追加 タイトルにBGM追加 CocosDenshion利用開始

--- a/cocos2d-x-3.0alpha0/projects/ichi_okuman_yen/proj.android/.project
+++ b/cocos2d-x-3.0alpha0/projects/ichi_okuman_yen/proj.android/.project
@@ -123,9 +123,9 @@
 			<locationURI>COCOS2DX/extensions</locationURI>
 		</link>
 		<link>
-			<name>scripting</name>
+			<name>cocosdenshion</name>
 			<type>2</type>
-			<locationURI>COCOS2DX/scripting</locationURI>
+			<locationURI>COCOS2DX/cocosdenshion</locationURI>
 		</link>
 	</linkedResources>
 	<variableList>
